Lots of changes in how projects are presented, new image added, and some blog tags changed.
Changes to be committed:
	modified:   blogs/desires_fears_artificial_intimacy.html
	modified:   blogs/hybrid_prompts.html
	modified:   blogs/synthetic_lover.html
	modified:   es/blogs/desires_fears_artificial_intimacy.html
	modified:   es/blogs/hybrid_prompts.html
	modified:   es/blogs/synthetic_lover.html
	modified:   es/projects/3v3_charger_circuit.html
	modified:   es/projects/aina.html
	modified:   es/projects/asd_robot.html
	modified:   es/projects/inverted_wheeled_pendulum_train.html
	modified:   es/projects/iter.html
	modified:   es/projects/lim2n.html
	modified:   es/projects/llm_pdf_qa.html
	modified:   es/projects/mini_vizca_400.html
	modified:   es/projects/paper.html
	modified:   es/projects/rovver_x_130.html
	modified:   projects/3v3_charger_circuit.html
	modified:   projects/aina.html
	modified:   projects/asd_robot.html
	modified:   projects/inverted_wheeled_pendulum_train.html
	modified:   projects/iter.html
	modified:   projects/lim2n.html
	modified:   projects/llm_pdf_qa.html
	modified:   projects/mini_vizca_400.html
	modified:   projects/paper.html
	modified:   projects/rovver_x_130.html
	modified:   src/assets/photo_squared.png
	new file:   src/assets/photo_squared_ghibli.png
	modified:   src/blog_posts/blogs.html
	modified:   src/blog_posts/blogs_es.html
	modified:   src/css/blog_posts.css
	modified:   src/css/style.css
	modified:   src/project_posts/projects.html
	modified:   src/project_posts/projects_cherrypicked.html
	modified:   src/project_posts/projects_cherrypicked_es.html
	modified:   src/project_posts/projects_es.html

--- a/blogs/desires_fears_artificial_intimacy.html
+++ b/blogs/desires_fears_artificial_intimacy.html
@@ -28,10 +28,10 @@
       <div id="content-blog">
         <h1 class="massiveHeading">Ethics and Technology: A Future of Desires
           and Fears in Artificial Intimacy</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">AI</span>
           <span class="category">Philosophy</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">Can the Use of Artificial Intelligence and Robotics
           for Sexual Satisfaction Promote Immoral and Dehumanizing
