--- a/blogs/hybrid_prompts.html
+++ b/blogs/hybrid_prompts.html
@@ -28,9 +28,9 @@
       <div id="content-blog">
         <h1 class="massiveHeading">Unlocking the Power of Hybrid Prompts: A
           Guide to Crafting Effective Conversational AI</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">AI</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">Hybrid prompts emerge from the intersection of two
           concepts: the latent space of large language models and the zone of
