--- a/blogs/synthetic_lover.html
+++ b/blogs/synthetic_lover.html
@@ -28,9 +28,9 @@
       <div id="content-blog">
         <h1 class="massiveHeading">The Synthetic Lover: A New Era in Sexual
           Exploration</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">AI</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">As the lines between fantasy and reality continue
           to blur, a new generation of artificial sexual companions is emerging.
