--- a/es/blogs/desires_fears_artificial_intimacy.html
+++ b/es/blogs/desires_fears_artificial_intimacy.html
@@ -28,10 +28,10 @@
       <div id="content-blog">
         <h1 class="massiveHeading">Ética y Tecnología: Un Futuro de Deseos y
           Miedos en la Intimidad Artificial</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">AI</span>
           <span class="category">Filosofía</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">Puede el uso de inteligencia artificial y robótica
           para
