--- a/es/blogs/hybrid_prompts.html
+++ b/es/blogs/hybrid_prompts.html
@@ -28,9 +28,9 @@
       <div id="content-blog">
         <h1 class="massiveHeading">Prompts híbridos: Guía para una IA
           Conversacional Efectiva</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">AI</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">Los prompts híbridos surgen de la intersección de
           dos
