--- a/es/blogs/synthetic_lover.html
+++ b/es/blogs/synthetic_lover.html
@@ -19,9 +19,9 @@
       <div id="navbar-placeholder"></div>
       <div id="content-blog">
         <h1 class="massiveHeading">Amantes Sintéticos: Una Nueva Era en la Exploración Sexual</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">AI</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">A medida que la línea entre la ficción y la realidad se hace borrosa, una nueva generación de acompañantes sexuales artificiales emerge. ¿Cuáles son los impactos de esto en nuestras relaciones, deseos y nuestro entendimiento de qué significa ser humano?</h2>
 
