--- a/es/projects/3v3_charger_circuit.html
+++ b/es/projects/3v3_charger_circuit.html
@@ -27,9 +27,9 @@
       <div id="content-blog">
         <h1 class="massiveHeading">Hacer que todos los dispositivos 3v3 sean
           recargables</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Electrónica </span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">Este es un circuito diseñado para cargar una
           batería lipo de 3.7V y, si es necesario,
