--- a/es/projects/aina.html
+++ b/es/projects/aina.html
@@ -30,10 +30,10 @@
       <div id="content-blog">
         <h1 class="massiveHeading">Aina - Plataforma de robot humanoide
           basada en ROS</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Robótica</span>
           <span class="category">Electrónica</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">Explorando las interacciones sociales
           a través de Aina, mi primera experiencia como desarrollador de robots
