--- a/es/projects/asd_robot.html
+++ b/es/projects/asd_robot.html
@@ -20,10 +20,10 @@
       <div id="navbar-placeholder"></div>
       <div id="content-blog">
         <h1 class="massiveHeading">Robot Humanoide Pequeño: Interacción con Niños con Autismo</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Robótica</span>
           <span class="category">Electrónica</span>
-        </p>
+        </p> -->
         <h2 class="subtitle">
           Cada vez se diagnostica a más niños con condiciones neurodivergentes, como el autismo.
           Este proyecto explora cómo la tecnología puede ayudar a estos niños a desarrollar mejores habilidades de interacción social.
