--- a/es/projects/inverted_wheeled_pendulum_train.html
+++ b/es/projects/inverted_wheeled_pendulum_train.html
@@ -17,10 +17,10 @@
       <div id="navbar-placeholder"></div>
       <div id="content-blog">
         <h1 class="massiveHeading">Este robot puede navegar mientras mantiene el equilibrio</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Isaac Sim</span>
           <span class="category">Robótica</span>
-        </p>
+        </p> -->
 
 
         <div class="video-container">
