--- a/es/projects/iter.html
+++ b/es/projects/iter.html
@@ -27,12 +27,12 @@
       <div id="content-blog">
         <h1 class="massiveHeading">Iter: Modularidad como concepto en el diseño
           de robótica</h1>
-          <p class="categories">
+          <!-- <p class="categories">
             <span class="category">Realidad Virtual</span>
             <span class="category">Robótica</span>
             <span class="category">Electrónica</span>
           </p>
-          
+           -->
 
         <h2 class="subtitle">Iter es un robot diseñado para ser lo más modular
           posible, tanto en términos de software como de
