--- a/es/projects/lim2n.html
+++ b/es/projects/lim2n.html
@@ -25,11 +25,11 @@
 
     <div id="content-blog">
       <h1 class="massiveHeading">Robots que entienden instrucciones humanas (y las siguen)</h1>
-      <p class="categories">
+      <!-- <p class="categories">
         <span class="category">Investigación</span>
         <span class="category">AI</span>
         <span class="category">Robótica</span>
-      </p>
+      </p> -->
 
       <h2 class="subtitle">
         Un experimento donde usé LLMs para razonar sobre mapas semánticos, generar rutas y
