--- a/es/projects/llm_pdf_qa.html
+++ b/es/projects/llm_pdf_qa.html
@@ -26,10 +26,10 @@
 
       <div id="content-blog">
         <h1 class="massiveHeading">Mejorando la Comprensión Humana: El Auge de
-          los Asistentes Inteligentes</h1>
+          <!-- los Asistentes Inteligentes</h1>
         <p class="categories">
           <span class="category">AI</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">En un mundo con exceso de información y tiempo
           limitado para explorarla, los asistentes de inteligencia artificial
