--- a/es/projects/mini_vizca_400.html
+++ b/es/projects/mini_vizca_400.html
@@ -26,10 +26,10 @@
 
       <div id="content-blog">
         <h1 class="massiveHeading">Mini Vizca 400: Gemelo Digital</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Isaac Sim</span>
           <span class="category">Robotics</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">
           Diseñando un gemelo digital del robot Mini Vizca 400 de <a href="https://www.maquintel.com/">Maquintel Robotic Services</a> en Nvidia Isaac Sim.
