--- a/es/projects/rovver_x_130.html
+++ b/es/projects/rovver_x_130.html
@@ -26,10 +26,10 @@
 
       <div id="content-blog">
         <h1 class="massiveHeading">Rovver X 130: Gemelo Digital</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Isaac Sim</span>
           <span class="category">Robotics</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">
           Diseñando una réplica digital del robot <a href="https://envirosight.com/products/rovver-x/">Rovver X 130</a> de Envirosight en Nvidia Isaac Sim.
