--- a/projects/3v3_charger_circuit.html
+++ b/projects/3v3_charger_circuit.html
@@ -26,9 +26,9 @@
 
       <div id="content-blog">
         <h1 class="massiveHeading">Make every 3v3 device rechargeable</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Electronics</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">This is a circuit that was design to charge a 3.7 V
           lipo battery and, if is necessary, act as a power supply, in both
