--- a/projects/aina.html
+++ b/projects/aina.html
@@ -29,10 +29,10 @@
 
       <div id="content-blog">
         <h1 class="massiveHeading">Aina - Humanoid plataform ROS robot</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Robotics</span>
           <span class="category">Electronics</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">The Journey of Exploring Social Interactions
           through Aina, My First Experience as an Open-Source Humanoid Robot
