--- a/projects/iter.html
+++ b/projects/iter.html
@@ -27,11 +27,11 @@
       <div id="content-blog">
         <h1 class="massiveHeading">Iter: Modularity at the heart of robotics
           design</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Virtual Reality</span>
           <span class="category">Robotics</span>
           <span class="category">Electronics</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">Iter is a robot designed to be as modular as
           possible, both in terms of software and
