--- a/projects/lim2n.html
+++ b/projects/lim2n.html
@@ -25,11 +25,11 @@
 
     <div id="content-blog">
       <h1 class="massiveHeading">Robots That Understand and Follow Human Instructions</h1>
-      <p class="categories">
+      <!-- <p class="categories">
         <span class="category">Investigación</span>
         <span class="category">AI</span>
         <span class="category">Robótica</span>
-      </p>
+      </p> -->
 
       <h2 class="subtitle">
         An experiment where I used LLMs to reason over semantic maps, generate paths, and control a Jetbot robot using PD. The key? A good prompt.
