--- a/src/blog_posts/blogs.html
+++ b/src/blog_posts/blogs.html
@@ -31,50 +31,47 @@
 
             <article class="project">
                 <!-- Blog 3 -->
-                <div class="card blog3"
-                    onclick="window.location.href = '/blogs/desires_fears_artificial_intimacy.html'">
+                <div class="card blog3" onclick="window.location.href = '/es/blogs/desires_fears_artificial_intimacy.html'">
+                    <img src="/src/blog_posts/blog3/img1.png" alt="Ethics and Technology: A Future of Desires and Fears in Artificial Intimacy" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Ethics and Technology: A Future of Desires and
-                                Fears in Artificial Intimacy</h3>
-                            <p>Can the Use of Artificial Intelligence and
-                                Robotics for Sexual Satisfaction Promote Immoral
-                                and Dehumanizing Behaviors?</p>
+                            <h3>Ethics and Technology: A Future of Desires and Fears in Artificial Intimacy</h3>
+                            <p>Can the Use of Artificial Intelligence and Robotics for Sexual Satisfaction Promote Immoral and Dehumanizing Behaviors?</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-pink">AI</span>
+                            <span class="badge badge-purple">Society</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Blog 2 -->
-                <div class="card blog2"
-                    onclick="window.location.href = '/blogs/synthetic_lover.html'">
+                <div class="card blog2" onclick="window.location.href = '/es/blogs/synthetic_lover.html'">
+                    <img src="/src/blog_posts/blog2/cyberlover_placehilder.png" alt="The Synthetic Lover: A New Era in Sexual Exploration" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>The Synthetic Lover: A New Era in Sexual
-                                Exploration</h3>
-                            <p>As the lines between fantasy and reality continue
-                                to blur, a new generation of artificial sexual
-                                companions is emerging.
-                                But what does this mean for our relationships,
-                                our desires, and our
-                                very understanding of what it means to be
-                                human?</p>
+                            <h3>The Synthetic Lover: A New Era in Sexual Exploration</h3>
+                            <p>As the lines between fantasy and reality continue to blur, a new generation of artificial sexual companions is emerging. But what does this mean for our relationships, our desires, and our very understanding of what it means to be human?</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-pink">AI</span>
+                            <span class="badge badge-orange">Robotics</span>
+                            <span class="badge badge-purple">Society</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Blog 1 -->
-                <div class="card blog1"
-                    onclick="window.location.href = '/blogs/hybrid_prompts.html'">
+                <div class="card blog1" onclick="window.location.href = '/es/blogs/hybrid_prompts.html'">
+                    <img src="/src/blog_posts/blog1/placeholder.png" alt="Hybrid Prompts: Guide to Effective Conversational AI" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Hybrid Prompts: Guide to Effective
-                                Conversational AI</h3>
-                            <p>Discover how combining closed-ended questions
-                                with open-ended prompts can revolutionize
-                                your conversational AI experiences. Learn
-                                how hybrid prompts can help create more
-                                realistic, engaging, and empathetic
-                                interactions with virtual beings.</p>
+                            <h3>Hybrid Prompts: Guide to Effective Conversational AI</h3>
+                            <p>Discover how combining closed-ended questions with open-ended prompts can revolutionize your conversational AI experiences. Learn how hybrid prompts can help create more realistic, engaging, and empathetic interactions with virtual beings.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-pink">AI</span>
+                            <span class="badge badge-yellow">Tutorial</span>
                         </div>
                     </div>
                 </div>
