--- a/src/blog_posts/blogs_es.html
+++ b/src/blog_posts/blogs_es.html
@@ -33,50 +33,49 @@
             <article class="project">
 
                 <!-- Blog 3 -->
-                <div class="card blog3"
-                    onclick="window.location.href = '/es/blogs/desires_fears_artificial_intimacy.html'">
+                <div class="card blog3" onclick="window.location.href = '/es/blogs/desires_fears_artificial_intimacy.html'">
+                    <img src="/src/blog_posts/blog3/img1.png" alt="Ética y Tecnología: Un Futuro de Deseos y Miedos en la Intimidad Artificial" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Ética y Tecnología: Un Futuro de Deseos y Miedos
-                                en la Intimidad Artificial</h3>
-                            <p>Puede el uso de inteligencia artificial y
-                                robótica para la satisfacción sexual promover
-                                conductas inmorales y deshumanizadoras?</p>
+                            <h3>Ética y Tecnología: Un Futuro de Deseos y Miedos en la Intimidad Artificial</h3>
+                            <p>¿Puede el uso de la Inteligencia Artificial y la Robótica para la Satisfacción Sexual promover comportamientos inmorales y deshumanizantes?</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-pink">IA</span>
+                            <span class="badge badge-purple">Sociedad</span>
                         </div>
                     </div>
                 </div>
+
 
                 <!-- Blog 2 -->
-                <div class="card blog2"
-                    onclick="window.location.href = '/es/blogs/synthetic_lover.html'">
+                <div class="card blog2" onclick="window.location.href = '/es/blogs/synthetic_lover.html'">
+                    <img src="/src/blog_posts/blog2/cyberlover_placehilder.png" alt="El Amante Sintético: Una Nueva Era en la Exploración Sexual" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Amantes Sintéticos: Una Nueva era en la
-                                Exploración Sexual</h3>
-                            <p>A medida que la línea entre la ficción y la
-                                realidad se hacen borrosas, una nueva generación
-                                de acompañantes sexuales artificiales emerge.
-                                Cuáles son los impactos de esto en nuestras
-                                relaciones, deseos, y nuestro entendimiento de
-                                que significa ser humano?</p>
+                            <h3>El Amante Sintético: Una Nueva Era en la Exploración Sexual</h3>
+                            <p>A medida que las líneas entre fantasía y realidad continúan difuminándose, está emergiendo una nueva generación de compañeros sexuales artificiales. Pero, ¿qué significa esto para nuestras relaciones, nuestros deseos y nuestra propia comprensión de lo que significa ser humano?</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-pink">IA</span>
+                            <span class="badge badge-orange">Robótica</span>
+                            <span class="badge badge-purple">Sociedad</span>
                         </div>
                     </div>
                 </div>
 
+
                 <!-- Blog 1 -->
-                <div class="card blog1"
-                    onclick="window.location.href = '/es/blogs/hybrid_prompts.html'">
+                <div class="card blog1" onclick="window.location.href = '/es/blogs/hybrid_prompts.html'">
+                    <img src="/src/blog_posts/blog1/placeholder.png" alt="Prompts Híbridos: Guía para una IA Conversacional Efectiva" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Prompts híbridos: Guía para una IA
-                                Conversacional Efectiva</h3>
-                            <p>Descubre cómo combinar preguntas cerradas con
-                                sugerencias abiertas puede revolucionar tus
-                                experiencias de inteligencia artificial
-                                conversacional. Aprende cómo las preguntas
-                                híbridas pueden ayudar a crear interacciones
-                                más realistas, atractivas y empáticas con
-                                seres virtuales.</p>
+                            <h3>Prompts Híbridos: Guía para una IA Conversacional Efectiva</h3>
+                            <p>Descubre cómo combinar preguntas cerradas con prompts abiertos puede revolucionar tus experiencias con IA conversacional. Aprende cómo los prompts híbridos pueden ayudar a crear interacciones más realistas, atractivas y empáticas con seres virtuales.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-pink">IA</span>
+                            <span class="badge badge-yellow">Tutorial</span>
                         </div>
                     </div>
                 </div>
