--- a/src/project_posts/projects.html
+++ b/src/project_posts/projects.html
@@ -32,150 +32,160 @@
             <article class="project">
 
                 <!-- Project 10 -->
-                <div class="card project10"
-                    onclick="window.location.href = '/projects/lim2n.html'">
+                <div class="card project10" onclick="window.location.href = '/projects/lim2n.html'">
+                    <img src="/src/project_posts/project10/intro_img.png" alt="Robots That Understand and Follow Human Instructions" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Robots That Understand and Follow Human Instructions</h3>
                             <p>An experiment where I used LLMs to reason over semantic maps, generate paths, and control a Jetbot robot using PD. The key? A good prompt.</p>
                         </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Research</span>
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-orange">LLM</span>
+                            <span class="badge badge-pink">Simulation</span>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Project 8 -->
-                <div class="card project8"
-                    onclick="window.location.href = '/projects/inverted_wheeled_pendulum_train.html'">
+                <div class="card project8" onclick="window.location.href = '/projects/inverted_wheeled_pendulum_train.html'">
+                    <img src="/src/project_posts/project8/card.png" alt="This robot can navigate while keeping its balance" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>This robot can navigate while keeping its balance</h3>
-                            <p>Design and simulation of a two-wheeled inverted pendulum trained using reinforcement learning in NVIDIA Isaac Lab to maintain balance and navigate. This project is a collaboration with a master's candidate from the Institute of Smart Systems and Artificial Intelligence, Nazarbayev University</p>
+                            <p>Two-wheeled inverted pendulum trained using reinforcement learning in NVIDIA Isaac Lab to maintain balance and navigate.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Research</span>
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-orange">Reinforcement Learning</span>
+                            <span class="badge badge-pink">Simulation</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 7 -->
-                <div class="card project7"
-                    onclick="window.location.href = '/projects/rovver_x_130.html'">
+                <div class="card project7" onclick="window.location.href = '/projects/rovver_x_130.html'">
+                    <img src="/src/project_posts/project7/card.png" alt="Rovver X 130: Digital Twin" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Rovver X 130: Digital Twin</h3>
                             <p>Designing a digital twin of the robot Rovver X 130 of Envirosight in Nvidia Isaac Sim.</p>
                         </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-pink">Simulation</span>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Project 6 -->
-                <div class="card project6"
-                    onclick="window.location.href = '/projects/mini_vizca_400.html'">
+                <div class="card project6" onclick="window.location.href = '/projects/mini_vizca_400.html'">
+                    <img src="/src/project_posts/project6/digital_twin.jpg" alt="Mini Vizca 400: Digital Twin" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Mini Vizca 400: Digital Twin</h3>
                             <p>Designing a digital twin of the robot Mini Vizca 400 of Maquintel Robotic Services in Nvidia Isaac Sim.</p>
                         </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-pink">Simulation</span>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Project 1 -->
-                <div class="card project1V2"
-                    onclick="window.location.href = '/projects/paper.html'">
+                <div class="card project1V2" onclick="window.location.href = '/projects/paper.html'">
+                    <img src="/src/project_posts/project1/trayectories.png" alt="Published research: Autonomous mobile robotics" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Published research: Autonomous mobile
-                                robotics</h3>
-                            <p>Designing a python library to generate
-                                navigation
-                                strategies
-                                for different types of mobile robots with
-                                Deep
-                                Reinforcement
-                                Learning in Nvidia Isaac Sim.</p>
+                            <h3>Published research: Autonomous mobile robotics</h3>
+                            <p>Designing a python library to generate navigation strategies for different types of mobile robots with Deep Reinforcement Learning in Nvidia Isaac Sim.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Research</span>
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-orange">Reinforcement Learning</span>
+                            <span class="badge badge-pink">Simulation</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 2 -->
-                <div class="card project2"
-                    onclick="window.location.href = '/projects/iter.html'">
+                <div class="card project2" onclick="window.location.href = '/projects/iter.html'">
+                    <img src="/src/project_posts/project2/iter_placeholder.jpg" alt="Iter: Modularity at the heart of robotics design" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Iter: Modularity at the heart of robotics
-                                design</h3>
-                            <p>Iter is a robot designed to be as modular as
-                                possible, both in terms of software and
-                                hardware. With dedicated
-                                swappable modules for each task according to the
-                                requirements that may
-                                arise. When communicating with external
-                                devices, it uses a Python-based API. It is
-                                controlled through a
-                                VR
-                                interface for Oculus Quest 2, connected to
-                                the
-                                robot using the same API.</p>
+                            <h3>Iter: Modularity at the heart of robotics design</h3>
+                            <p>Designed to be as modular as possible, both in terms of software and hardware. With dedicated swappable modules for each task according to the requirements and a Python-based API.</p>
                         </div>
-
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-purple">Electronics</span>
+                            <span class="badge badge-cyan">VR</span>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Project 3 -->
-                <div class="card project3"
-                    onclick="window.location.href = '/projects/llm_pdf_qa.html'">
+                <div class="card project3" onclick="window.location.href = '/projects/llm_pdf_qa.html'">
+                    <img src="/src/project_posts/project3/pdf-chat.jpg" alt="Enhancing Human Understanding: The Rise of Intelligent Assistants" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Enhancing Human Understanding: The Rise of
-                                Intelligent Assistants</h3>
-                            <p>In a world where information is abundant but
-                                time-consuming to navigate and explore,
-                                intelligent research assistants have emerged as
-                                indispensable allies to generate knowledge and
-                                find applications for it. This blog entry
-                                explores the cutting-edge technologies powering
-                                these AI-powered companions, their ability to
-                                explore vast knowledge bases, and how they
-                                assist in finding valuable insights and
-                                applications.</p>
+                            <h3>Enhancing Human Understanding: The Rise of Intelligent Assistants</h3>
+                            <p>Exploring AI-powered assistants, their ability to explore vast knowledge bases, and how they assist in finding valuable insights and applications.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-orange">LLM</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 4 -->
-                <div class="card project4"
-                    onclick="window.location.href = '/projects/3v3_charger_circuit.html'">
+                <div class="card project4" onclick="window.location.href = '/projects/3v3_charger_circuit.html'">
+                    <img src="/src/project_posts/project4/circuit.jpg" alt="Make every 3v3 device rechargeable" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Make every 3v3 device rechargeable</h3>
-                            <p>This is a circuit that was design to charge a 3.7
-                                V lipo battery and, if is necessary, act as a
-                                power supply, in both cases the the output
-                                voltage is 3.3 V.</p>
+                            <p>This is a circuit that was design to charge a 3.7 V lipo battery and, if is necessary, act as a power supply, in both cases the output voltage is 3.3 V.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-purple">Electronics</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 5 -->
-                <div class="card project5"
-                    onclick="window.location.href = '/projects/aina.html'">
+                <div class="card project5" onclick="window.location.href = '/projects/aina.html'">
+                    <img src="/src/project_posts/project5/aina.png" alt="Aina - Humanoid platform ROS robot" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Aina - Humanoid plataform ROS robot</h3>
-                            <p>The Journey of Exploring Social Interactions
-                                through Aina, My First Experience as an
-                                Open-Source Humanoid Robot Developer</p>
+                            <h3>Aina - Humanoid platform ROS robot</h3>
+                            <p>The Journey of Exploring Social Interactions through Aina, My First Experience as an Open-Source Humanoid Robot Developer</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-purple">Electronics</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 9 -->
-                <div class="card project9"
-                    onclick="window.location.href = '/projects/asd_robot.html'">
+                <div class="card project9" onclick="window.location.href = '/projects/asd_robot.html'">
+                    <img src="/src/project_posts/project9/r.jpg" alt="Small Humanoid Robot for Interaction with Kids with Autism" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Small Humanoid Robot for Interaction with Kids with Autism</h3>
-                            <p>More children are diagnosed with autism. This project explores how 
-                                technology can boost their social skills.</p>
+                            <p>More children are diagnosed with autism. This project explores how technology can boost their social skills.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-purple">Electronics</span>
                         </div>
                     </div>
                 </div>
+
 
             </article>
 
