--- a/src/project_posts/projects_cherrypicked_es.html
+++ b/src/project_posts/projects_cherrypicked_es.html
@@ -31,49 +31,50 @@
 
             <article class="project">
                 <!-- Project 1 -->
-                <div class="card project1V2"
-                    onclick="window.location.href = '/es/projects/paper.html'">
+                <div class="card project1V2" onclick="window.location.href = '/projects/paper.html'">
+                    <img src="/src/project_posts/project1/trayectories.png" alt="Investigación publicada: Robótica móvil autónoma" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Investigación publicada: Robótica móvil
-                                autónoma</h3>
-                            <p>Diseñando una biblioteca en Python para
-                                generar estrategias de navegación para
-                                diferentes tipos de robots móviles con
-                                Aprendizaje Profundo por Refuerzo en Nvidia
-                                Isaac Sim.</p>
-
+                            <h3>Investigación publicada: Robótica móvil autónoma</h3>
+                            <p>Diseñando una biblioteca de Python para generar estrategias de navegación para diferentes tipos de robots móviles con Aprendizaje por Refuerzo Profundo en Nvidia Isaac Sim.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Investigación</span>
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-orange">Aprendizaje por Refuerzo</span>
+                            <span class="badge badge-pink">Simulación</span>
                         </div>
                     </div>
                 </div>
 
-                <!-- Project 2 -->
-                <div class="card project2"
-                    onclick="window.location.href = '/es/projects/iter.html'">
+                <!-- Project 10 -->
+                <div class="card project10" onclick="window.location.href = '/projects/lim2n.html'">
+                    <img src="/src/project_posts/project10/intro_img.png" alt="Robots que Entienden y Siguen Instrucciones Humanas" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Iter: Modularidad como concepto en el diseño de
-                                robótica</h3>
-                            <p>Iter es un robot diseñado para ser lo más modular
-                                posible, tanto en términos de software como de
-                                hardware. Con módulos intercambiables dedicados
-                                para cada tarea de acuerdo a los requisitos que
-                                puedan surgir. Al comunicarse con dispositivos
-                                externos, utiliza una API basada en Python. Se
-                                controla a través de una interfaz de realidad
-                                virtual para Oculus Quest 2, conectada al robot
-                                usando la misma API.</p>
+                            <h3>Robots que Entienden y Siguen Instrucciones Humanas</h3>
+                            <p>Un experimento donde utilicé LLMs para razonar sobre mapas semánticos, generar rutas y controlar un robot Jetbot usando PD. ¿La clave? Un buen prompt.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Investigación</span>
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-orange">LLM</span>
+                            <span class="badge badge-pink">Simulación</span>
                         </div>
                     </div>
                 </div>
 
-                <!-- Proyecto 6 -->
-                <div class="card project6"
-                    onclick="window.location.href = '/es/projects/mini_vizca_400.html'">
+                <!-- Project 6 -->
+                <div class="card project6" onclick="window.location.href = '/projects/mini_vizca_400.html'">
+                    <img src="/src/project_posts/project6/digital_twin.jpg" alt="Mini Vizca 400: Gemelo Digital" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Mini Vizca 400: Gemelo Digital</h3>
-                            <p>Diseñando una réplica digital del robot Mini Vizca 400 de Servicios Robóticos Maquintel en Nvidia Isaac Sim.</p>
+                            <p>Gemelo digital del robot Mini Vizca 400 de Maquintel Robotic Services en Nvidia Isaac Sim.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-pink">Simulación</span>
                         </div>
                     </div>
                 </div>
