--- a/src/project_posts/projects_es.html
+++ b/src/project_posts/projects_es.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- Primary Meta Tags -->
-        <title>Magical Enginering</title>
-        <meta name="title" content="Magical Enginering" />
+        <title>Ingeniería Mágica</title>
+        <meta name="title" content="Ingeniería Mágica" />
         <meta
             name="description"
-            content="Personal website about robotics, deep learning and philosophy" />
+            content="Sitio web personal sobre robótica, aprendizaje profundo y filosofía" />
         <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -21,154 +21,167 @@
     </head>
 
     <body>
-        <!-- Projects -->
+        <!-- Projects -->`
         <section id="projects" class="projects-general container">
             <!-- <div class="division"></div> -->
             <div class="content-text">
                 <h2>Proyectos</h2>
-                <p>Aquí tienes la lista completa de proyectos, ¡disfrútala!</p>
+                <p>¡Aquí tienes la lista completa de los proyectos, disfruta!</p>
             </div>
 
             <article class="project">
 
                 <!-- Project 10 -->
-                <div class="card project10"
-                    onclick="window.location.href = '/es/projects/lim2n.html'">
+                <div class="card project10" onclick="window.location.href = '/es/projects/lim2n.html'">
+                    <img src="/src/project_posts/project10/intro_img.png" alt="Robots que Entienden y Siguen Instrucciones Humanas" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Robots que entienden instrucciones humanas (y las siguen)</h3>
-                            <p>Un experimento donde usé LLMs para razonar sobre mapas semánticos, generar rutas y
-        controlar un robot Jetbot con PD. ¿La clave? Un buen prompt.</p>
+                            <h3>Robots que Entienden y Siguen Instrucciones Humanas</h3>
+                            <p>Un experimento donde utilicé LLMs para razonar sobre mapas semánticos, generar rutas y controlar un robot Jetbot usando PD. ¿La clave? Un buen prompt.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Investigación</span>
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-orange">LLM</span>
+                            <span class="badge badge-pink">Simulación</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 8 -->
-                <div class="card project8"
-                    onclick="window.location.href = '/es/projects/inverted_wheeled_pendulum_train.html'">
+                <div class="card project8" onclick="window.location.href = '/es/projects/inverted_wheeled_pendulum_train.html'">
+                    <img src="/src/project_posts/project8/card.png" alt="Este robot puede navegar mientras mantiene su equilibrio" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Este robot puede navegar mientras mantiene el equilibrio</h3>
-                            <p>Diseño y simulación de un péndulo invertido de dos ruedas entrenado con aprendizaje por refuerzo en NVIDIA Isaac Lab para mantener el equilibrio y navegar. Este proyecto es una colaboración con un estudiante de maestría del Institute of Smart Systems and Artificial Intelligence, Nazarbayev University.</p>
+                            <h3>Este robot puede navegar mientras mantiene su equilibrio</h3>
+                            <p>Péndulo invertido de dos ruedas entrenado usando aprendizaje por refuerzo en NVIDIA Isaac Lab para mantener el equilibrio y navegar.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Investigación</span>
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-orange">Aprendizaje por Refuerzo</span>
+                            <span class="badge badge-pink">Simulación</span>
                         </div>
                     </div>
                 </div>
 
-                <!-- Proyecto 7 -->
-                <div class="card project7"
-                    onclick="window.location.href = '/es/projects/rovver_x_130.html'">
+                <!-- Project 7 -->
+                <div class="card project7" onclick="window.location.href = '/es/projects/rovver_x_130.html'">
+                    <img src="/src/project_posts/project7/card.png" alt="Rovver X 130: Gemelo Digital" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Rovver X 130: Gemelo Digital</h3>
-                            <p>Diseñando una réplica digital del robot Rovver X 130 de Envirosight en Nvidia Isaac Sim.</p>
+                            <p>Diseñando un gemelo digital del robot Rovver X 130 de Envirosight en Nvidia Isaac Sim.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-pink">Simulación</span>
                         </div>
                     </div>
                 </div>
 
-                <!-- Proyecto 6 -->
-                <div class="card project6"
-                    onclick="window.location.href = '/es/projects/mini_vizca_400.html'">
+                <!-- Project 6 -->
+                <div class="card project6" onclick="window.location.href = '/es/projects/mini_vizca_400.html'">
+                    <img src="/src/project_posts/project6/digital_twin.jpg" alt="Mini Vizca 400: Gemelo Digital" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Mini Vizca 400: Gemelo Digital</h3>
-                            <p>Diseñando una réplica digital del robot Mini Vizca 400 de Servicios Robóticos Maquintel en Nvidia Isaac Sim.</p>
+                            <p>Gemelo digital del robot Mini Vizca 400 de Maquintel Robotic Services en Nvidia Isaac Sim.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-pink">Simulación</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 1 -->
-                <div class="card project1V2"
-                    onclick="window.location.href = '/es/projects/paper.html'">
+                <div class="card project1V2" onclick="window.location.href = '/es/projects/paper.html'">
+                    <img src="/src/project_posts/project1/trayectories.png" alt="Investigación publicada: Robótica móvil autónoma" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Investigación publicada: Robótica móvil
-                                autónoma</h3>
-                            <p>Diseñando una biblioteca en Python para
-                                generar estrategias de navegación para
-                                diferentes tipos de robots móviles con
-                                Aprendizaje Profundo por Refuerzo en Nvidia
-                                Isaac Sim.</p>
+                            <h3>Investigación publicada: Robótica móvil autónoma</h3>
+                            <p>Diseñando una biblioteca de Python para generar estrategias de navegación para diferentes tipos de robots móviles con Aprendizaje por Refuerzo Profundo en Nvidia Isaac Sim.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Investigación</span>
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-orange">Aprendizaje por Refuerzo</span>
+                            <span class="badge badge-pink">Simulación</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 2 -->
-                <div class="card project2"
-                    onclick="window.location.href = '/es/projects/iter.html'">
+                <div class="card project2" onclick="window.location.href = '/es/projects/iter.html'">
+                    <img src="/src/project_posts/project2/iter_placeholder.jpg" alt="Iter: La modularidad en el corazón del diseño robótico" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Iter: Modularidad como concepto en el diseño de
-                                robótica</h3>
-                            <p>Iter es un robot diseñado para ser lo más modular
-                                posible, tanto en términos de software como de
-                                hardware. Con módulos intercambiables dedicados
-                                para cada tarea de acuerdo a los requisitos que
-                                puedan surgir. Al comunicarse con dispositivos
-                                externos, utiliza una API basada en Python. Se
-                                controla a través de una interfaz de realidad
-                                virtual para Oculus Quest 2, conectada al robot
-                                usando la misma API.</p>
+                            <h3>Iter: La modularidad en el corazón del diseño robótico</h3>
+                            <p>Creado para ser lo más modular posible, tanto en términos de software como de hardware. Con módulos intercambiables dedicados para cada tarea según los requisitos y una API basada en Python.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-purple">Electrónica</span>
+                            <span class="badge badge-cyan">VR</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 3 -->
-                <div class="card project3"
-                    onclick="window.location.href = '/es/projects/llm_pdf_qa.html'">
+                <div class="card project3" onclick="window.location.href = '/es/projects/llm_pdf_qa.html'">
+                    <img src="/src/project_posts/project3/pdf-chat.jpg" alt="Mejorando la Comprensión Humana: El Auge de los Asistentes Inteligentes" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Mejorando la Comprensión Humana: El Auge de los
-                                Asistentes Inteligentes</h3>
-                            <p>En un mundo con exceso de información y tiempo
-                                limitado para explorarla, los asistentes de
-                                inteligencia artificial son aliados esenciales
-                                para procesar y encontrar aplicaciones útiles.
-                                Este blog explora las tecnologías avanzadas que
-                                impulsan estos compañeros de IA, su capacidad
-                                para explorar grandes bases de datos y su ayuda
-                                en la generación de ideas y aplicaciones
-                                valiosas.</p>
+                            <h3>Mejorando la Comprensión Humana: El Auge de los Asistentes Inteligentes</h3>
+                            <p>Explorando asistentes impulsados por IA, su capacidad para explorar vastas bases de conocimiento, y cómo ayudan a encontrar ideas.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-orange">LLM</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 4 -->
-                <div class="card project4"
-                    onclick="window.location.href = '/es/projects/3v3_charger_circuit.html'">
+                <div class="card project4" onclick="window.location.href = '/es/projects/3v3_charger_circuit.html'">
+                    <img src="/src/project_posts/project4/circuit.jpg" alt="Haz que cada dispositivo 3v3 sea recargable" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Hacer que todos los dispositivos 3v3 sean
-                                recargables</h3>
-                            <p>Este es un circuito diseñado para cargar una
-                                batería lipo de 3.7V y, si es necesario,
-                                actuar como una fuente de alimentación, en ambos
-                                casos la salida de voltaje es de 3.3V.</p>
+                            <h3>Haz que cada dispositivo 3v3 sea recargable</h3>
+                            <p>Este es un circuito que fue diseñado para cargar una batería lipo de 3.7 V y, si es necesario, actuar como fuente de alimentación, en ambos casos el voltaje de salida es 3.3 V.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-purple">Electrónica</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 5 -->
-                <div class="card project5"
-                    onclick="window.location.href = '/es/projects/aina.html'">
+                <div class="card project5" onclick="window.location.href = '/es/projects/aina.html'">
+                    <img src="/src/project_posts/project5/aina.png" alt="Aina - Plataforma robótica humanoide ROS" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Aina - Plataforma de robot humanoide basada en
-                                ROS</h3>
-                            <p>Explorando las interacciones sociales a través de
-                                Aina, mi primera experiencia como desarrollador
-                                de robots humanoides de código abierto</p>
+                            <h3>Aina - Plataforma robótica humanoide ROS</h3>
+                            <p>El Viaje de Explorar Interacciones Sociales a través de Aina, Mi Primera Experiencia como Desarrollador de Robot Humanoide de Código Abierto</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-purple">Electrónica</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 9 -->
-                <div class="card project9"
-                    onclick="window.location.href = '/es/projects/asd_robot.html'">
+                <div class="card project9" onclick="window.location.href = '/es/projects/asd_robot.html'">
+                    <img src="/src/project_posts/project9/r.jpg" alt="Robot Humanoide Pequeño para Interacción con Niños con Autismo" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Pequeño robot humanoide para la interacción con niños con autismo</h3>
-                            <p>Cada vez se diagnostica a más niños con autismo. Este proyecto explora cómo 
-                                la tecnología puede potenciar sus habilidades sociales.</p>
+                            <h3>Robot Humanoide Pequeño para Interacción con Niños con Autismo</h3>
+                            <p>Más niños son diagnosticados con autismo. Este proyecto explora cómo la tecnología puede mejorar sus habilidades sociales.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robótica</span>
+                            <span class="badge badge-purple">Electrónica</span>
                         </div>
                     </div>
                 </div>
