--- a/es/projects/paper.html
+++ b/es/projects/paper.html
@@ -27,11 +27,11 @@
       <div id="content-blog">
         <h1 class="massiveHeading">Investigación publicada: Robótica móvil
           autónoma</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Investigación</span>
           <span class="category">AI</span>
           <span class="category">Robótica</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle"><a
             href="https://www.mdpi.com/2076-3417/12/17/8429">Investigación
