--- a/projects/asd_robot.html
+++ b/projects/asd_robot.html
@@ -19,10 +19,10 @@
       <div id="navbar-placeholder"></div>
       <div id="content-blog">
         <h1 class="massiveHeading">Small Humanoid Robot for Interaction with Kids with Autism</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Robotics</span>
           <span class="category">Electronics</span>
-        </p>
+        </p> -->
         <h2 class="subtitle">
           More and more children today are being diagnosed with neurodivergent conditions like autism.
           This project explores how technology can support these children in developing better social interaction skills.
