--- a/projects/inverted_wheeled_pendulum_train.html
+++ b/projects/inverted_wheeled_pendulum_train.html
@@ -17,10 +17,10 @@
       <div id="navbar-placeholder"></div>
       <div id="content-blog">
         <h1 class="massiveHeading">This robot can navigate while keeping its balance</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Isaac Sim</span>
           <span class="category">Robotics</span>
-        </p>
+        </p> -->
 
         <div class="video-container">
           <iframe 
