--- a/projects/llm_pdf_qa.html
+++ b/projects/llm_pdf_qa.html
@@ -27,9 +27,9 @@
       <div id="content-blog">
         <h1 class="massiveHeading">Enhancing Human Understanding: The Rise of
           Intelligent Assistants</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">AI</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">In a world where information is abundant but
           time-consuming to navigate and explore, intelligent research
