--- a/projects/mini_vizca_400.html
+++ b/projects/mini_vizca_400.html
@@ -26,10 +26,10 @@
 
       <div id="content-blog">
         <h1 class="massiveHeading">Mini Vizca 400: Digital Twin</h1>
-        <p class="categories">
+        <!-- <p class="categories">
           <span class="category">Isaac Sim</span>
           <span class="category">Robotics</span>
-        </p>
+        </p> -->
 
         <h2 class="subtitle">
           Designing a digital twin of the robot Mini Vizca 400 of <a href="https://www.maquintel.com/">Maquintel Robotic Services</a> in Nvidia Isaac Sim.
