--- a/src/project_posts/projects_cherrypicked.html
+++ b/src/project_posts/projects_cherrypicked.html
@@ -31,53 +31,50 @@
 
             <article class="project">
                 <!-- Project 1 -->
-                <div class="card project1V2"
-                    onclick="window.location.href = '/projects/paper.html'">
+                <div class="card project1V2" onclick="window.location.href = '/projects/paper.html'">
+                    <img src="/src/project_posts/project1/trayectories.png" alt="Published research: Autonomous mobile robotics" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Published research: Autonomous mobile
-                                robotics</h3>
-                            <p>Designing a python library to generate
-                                navigation
-                                strategies
-                                for different types of mobile robots with
-                                Deep
-                                Reinforcement
-                                Learning in Nvidia Isaac Sim.</p>
+                            <h3>Published research: Autonomous mobile robotics</h3>
+                            <p>Designing a python library to generate navigation strategies for different types of mobile robots with Deep Reinforcement Learning in Nvidia Isaac Sim.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Research</span>
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-orange">Reinforcement Learning</span>
+                            <span class="badge badge-pink">Simulation</span>
                         </div>
                     </div>
                 </div>
 
-                <!-- Project 2 -->
-                <div class="card project2"
-                    onclick="window.location.href = '/projects/iter.html'">
+                <!-- Project 10 -->
+                <div class="card project10" onclick="window.location.href = '/projects/lim2n.html'">
+                    <img src="/src/project_posts/project10/intro_img.png" alt="Robots That Understand and Follow Human Instructions" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Iter: Modularity at the heart of robotics
-                                design</h3>
-                            <p>Iter is a robot designed to be as modular as
-                                possible, both in terms of software and
-                                hardware. With dedicated
-                                swappable modules for each task according to the
-                                requirements that may
-                                arise. When communicating with external
-                                devices, it uses a Python-based API. It is
-                                controlled through a
-                                VR
-                                interface for Oculus Quest 2, connected to
-                                the
-                                robot using the same API.</p>
+                            <h3>Robots That Understand and Follow Human Instructions</h3>
+                            <p>An experiment where I used LLMs to reason over semantic maps, generate paths, and control a Jetbot robot using PD. The key? A good prompt.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-green">Research</span>
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-orange">LLM</span>
+                            <span class="badge badge-pink">Simulation</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 6 -->
-                <div class="card project6"
-                    onclick="window.location.href = '/projects/mini_vizca_400.html'">
+                <div class="card project6" onclick="window.location.href = '/projects/mini_vizca_400.html'">
+                    <img src="/src/project_posts/project6/digital_twin.jpg" alt="Mini Vizca 400: Digital Twin" class="card-img-top">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Mini Vizca 400: Digital Twin</h3>
                             <p>Designing a digital twin of the robot Mini Vizca 400 of Maquintel Robotic Services in Nvidia Isaac Sim.</p>
+                        </div>
+                        <div class="card-tags">
+                            <span class="badge badge-blue">Robotics</span>
+                            <span class="badge badge-pink">Simulation</span>
                         </div>
                     </div>
                 </div>
